--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -15,6 +15,7 @@
                 
                 <h2 class="h4 mt-5 mb-3 feature-title">Features</h2>
                 <ul class="feature-list">
+                    <li>GDPR compliant</li>
                     <li>Instant branded job boards</li>
                     <li>Multiple professional themes</li>
                     <li>Custom color architecture</li>
