--- a/marketing/templates/marketing/template_select.html
+++ b/marketing/templates/marketing/template_select.html
@@ -18,24 +18,23 @@
         
         <div class="row g-4 justify-content-center">
             {% for template in templates %}
-<div class="col-md-4">
-    <div class="template-card theme-{{ template.id }} h-100">
-        <img src="{% static 'marketing/images/default_'|add:template.id|add:'.jpg' %}" 
-            class="img-fluid rounded mb-3" 
-            style="height: 160px; width: 100%; object-fit: cover;" 
-            alt="{{ template.name }}">
-        <span class="feature-label">{{ template.name }}</span>
-        <p class="small text-muted mb-4">{{ template.description }}</p>
-        
-        <a href="{% public_url 'template_preview' template_id=template.id %}">Preview</a>
-        
-        <a href="{% public_url 'tenant_signup' %}?template={{ template.id }}" class="small text-muted text-center d-block dynamic-link">Skip to Signup</a>
-    </div>
-</div>
+        <div class="col-md-4">
+            <div class="template-card theme-{{ template.id }}">
+                <img src="{% static 'marketing/images/previews/'|add:template.id|add:'.jpg' %}" 
+                    class="img-fluid rounded mb-3 shadow-sm" 
+                    alt="{{ template.name }}">
+                    
+                <h5 class="fw-bold">{{ template.name }}</h5>
+                <p class="small text-muted mb-4">{{ template.description }}</p>
+                
+                <a href="{% public_url 'tenant_signup' %}?template={{ template.id }}" 
+                class="btn btn-primary w-100">
+                Select This Design
+                </a>
+            </div>
+        </div>
 {% endfor %}
         </div>
     </div>
 </section>
-
-<script src="{% static 'marketing/js/template-selector.js' %}"></script>
 {% endblock %}
