--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -4,7 +4,7 @@
 {% block title %}{{ profile.display_name }} | Careers{% endblock %}
 
 {% block content %}
-<div class="theme-{{ profile.template_choice|default:'executive' }} agency-site">
+<div class="agency-site">
 
     {# HERO SECTION #}
     <section class="hero-section">
