--- a/cms/templates/cms/application_success.html
+++ b/cms/templates/cms/application_success.html
@@ -3,7 +3,7 @@
 {% block title %}Application Received | {{ profile.display_name }}{% endblock %}
 
 {% block content %}
-<div class="theme-{{ profile.template_choice|default:'executive' }} agency-site">
+<div class="agency-site">
 <div class="container py-5 text-center">
     <div class="py-5">
         <div class="mb-4">
