--- a/cms/templates/cms/edit_site.html
+++ b/cms/templates/cms/edit_site.html
@@ -157,7 +157,7 @@
 
             {# ── RIGHT PANEL: Preview ── #}
         <div class="col-lg-7 col-xl-8">
-            <div id="mobile-preview-warning" class="d-none p-5 text-center bg-white border rounded">
+            <div id="mobile-preview-warning" class="p-5 text-center bg-white border rounded">
                 <div class="mb-3"><i class="bi bi-display fs-1 text-muted"></i></div>
                 <h5>The site buidler is better on Desktop</h5>
                 <p class="text-muted">Please use a larger screen to see the live preview of your site.</p>
