--- a/cms/templates/cms/base_tenant.html
+++ b/cms/templates/cms/base_tenant.html
@@ -141,7 +141,7 @@
         </div>
     </div>
 </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'cms/js/hero-contrast.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
