--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -9,9 +9,14 @@
     {# HERO SECTION #}
     <section class="hero-section">
         <div class="container">
-            <div class="row align-items-center {% if profile.template_choice == 'startup' %}flex-column-reverse flex-lg-row{% endif %}">
+            <div class="row align-items-center 
+                {% if profile.template_choice == 'startup' %}
+                    flex-column-reverse flex-lg-row
+                {% elif profile.template_choice == 'boutique' %}
+                    flex-row-reverse
+                {% endif %}">
 
-                <div class="col-12 col-lg-7 order-2 order-lg-1">
+                <div class="col-12 col-lg-7">
                     <div class="hero-content">
                         <h1 class="hero-title">{{ profile.hero_title }}</h1>
                         <p class="hero-text">{{ profile.hero_text|linebreaksbr }}</p>
@@ -22,7 +27,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-lg-5 order-1 order-lg-2 mb-5 mb-lg-0">
+                <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                     <div class="hero-image-wrapper">
                         <img src="{{ profile.get_hero_image }}" class="hero-img-styled">
                     </div>
