--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -29,7 +29,7 @@
 
                 <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                     <div class="hero-image-wrapper">
-                        <img src="{{ profile.get_hero_image }}" class="hero-img-styled">
+                        <img src="{{ profile.get_hero_image }}" class="hero-img-styled" alt="{{ profile.display_name }} main company image">
                     </div>
                 </div>
 
