--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -27,11 +27,31 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-lg-5 mb-5 mb-lg-0">
-                    <div class="hero-image-wrapper">
-                        <img src="{{ profile.get_hero_image }}" class="hero-img-styled" alt="{{ profile.display_name }} main company image">
-                    </div>
-                </div>
+       <div class="col-12 col-lg-5 mb-5 mb-lg-0">
+            <div class="hero-image-wrapper">
+                {% if profile.hero_image %}
+                    {# 1. If the user uploaded an image to Cloudinary, use that #}
+                    <img src="{{ profile.hero_image.url }}" 
+                        class="hero-img-styled" 
+                        alt="{{ profile.display_name }} hero image">
+                {% else %}
+                    {# 2. Otherwise, use your specific local files from your MacBook folders #}
+                    {% if profile.template_choice == 'startup' %}
+                        <img src="{% static 'marketing/images/default_startup.jpg' %}" 
+                            class="hero-img-styled" 
+                            alt="Startup tech workspace">
+                    {% elif profile.template_choice == 'boutique' %}
+                        <img src="{% static 'marketing/images/default_boutique.jpg' %}" 
+                            class="hero-img-styled" 
+                            alt="Boutique creative studio">
+                    {% else %}
+                        <img src="{% static 'marketing/images/default_executive.jpg' %}" 
+                            class="hero-img-styled" 
+                            alt="Professional executive office">
+                    {% endif %}
+                {% endif %}
+            </div>
+        </div>
 
             </div>{# /row #}
         </div>{# /container #}
