--- a/marketing/templates/marketing/landing.html
+++ b/marketing/templates/marketing/landing.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5 mb-4 mb-lg-0">
-                <img src="{% static 'marketing/images/hero-image.jpg' %}" class="img-fluid hero-img-sm" alt="Architectural pillars">
+                <img src="{% static 'marketing/images/hero-image.webp' %}" class="img-fluid hero-img-sm" alt="Architectural pillars">
             </div>
             
             <div class="col-lg-6 offset-lg-1 text-lg-start text-center">
