--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="{% static 'marketing/images/pp-logo.png' %}" alt="Pillar & Post Logo">
+                <img src="{% static 'marketing/images/pp-logo.webp' %}" alt="Pillar & Post Logo">
                 <span class="ms-2">PILLAR & POST</span>
             </a>
             
