--- a/marketing/templates/marketing/signup.html
+++ b/marketing/templates/marketing/signup.html
@@ -14,6 +14,7 @@
             
             <form method="post" id="signup-form">
                 {% csrf_token %}
+                <input type="hidden" name="template_choice" value="{{ request.GET.template|default:'executive' }}">
                 {{ form|crispy }}
                 
                 <button type="submit" id="submit-btn" class="btn btn-primary w-100 mt-3">
