--- a/cms/templates/cms/base_cms.html
+++ b/cms/templates/cms/base_cms.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg sticky-top cms-navbar-main">
         <div class="container-fluid px-4">
             <a class="navbar-brand d-flex align-items-center" href="{% url 'cms:dashboard' %}">
-                <img src="{% static 'marketing/images/pp-logo.png' %}" alt="Pillar & Post" class="cms-logo">
+                <img src="{% static 'marketing/images/pp-logo.webp' %}" alt="Pillar & Post" class="cms-logo">
                 <span class="brand-text">PILLAR & POST</span>
             </a>
             
